<?xml version="1.0"?>
<package>
  <name>quad_monitor</name>
  <version>0.0.0</version>
  <description>Publishes a missing header, faster to do this than rewrite ppengineros</description>

  <maintainer email="nick30075@utexas.edu">nickMont</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gbx_ros_bridge_msgs</build_depend>
  <build_depend>gps_kf</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>cmake_modules</run_depend> 
  <run_depend>roscpp</run_depend>
  <run_depend>gbx_ros_bridge_msgs</run_depend>
  <run_depend>gps_kf</run_depend>


  <export>
  </export>
</package>

